add: file handler docs updates, add comments to code for readability, improve tests to prevent bugs, and also add an experimental flag in the build file to prevent errors with JDK 25 and Mockito.